# 2026-tibble-bot

./: README.md  TODO.md
docker/: Docker-Compose.yaml  Dockerfile
ros2/bringup/: setup.py
ros2/bringup/config/: view_urdf.rviz
ros2/bringup/launch/: teleop.launch.py  view_urdf.launch.py
ros2/control/: CMakeLists.txt  package.xml
ros2/control/config/: terrence_controller.xml  terrence_hwc.xml  tibble_controller.yaml
ros2/control/include/control/: arduino_comms.hpp  can_comms.hpp  terrence_controller.hpp  terrence_hwc.hpp  tibble_controller.hpp  tibble_hwc.hpp
ros2/control/src/: terrence_controller.cpp  tibble_controller.cpp  tibble_hwc.cpp
ros2/description/: package.xml  setup.py
ros2/description/meshes/: BLA.STL  BL_Wheel.STL  BR_Wheel.STL  DL_Wheel.STL  DR_Wheel.STL  Excavation.STL  Excavation_Link.STL  FL_Wheel.STL  FR_Wheel.STL  Hopper.STL  HopperDoor_Link.STL  Hopper_Door.STL  Hopper_Latch.STL  Hopper_Link.STL  Hopperlatch_Link.STL  LA.STL  LKraken_Link.STL  ML_Wheel.STL  MR_Wheel.STL  RKraken_Link.STL  TLA.STL  TLA_Link.STL  TL_Wheel.STL  TR_Wheel.STL  base_link.STL
ros2/description/urdf/: gazebo.xacro  ros2_control.xacro  sensors.xacro  tibble.urdf.xacro  tibble_core.xacro  tibbs.urdf.xacro
teensy_firmware/: platformio.ini
teensy_firmware/src/: main.cpp
